# gapid

cmd/gapit/: BUILD.bazel  flags.go  memory.go  screenshot.go  state.go  stats.go
core/image/: uncompressed.go
examples/: example.vert  vert.spv
gapii/cc/: vulkan_extras.cpp
gapil/template/: constant_sets.go
gapis/api/: BUILD.bazel  cmd.go  cmd_extras.go  cmd_foreach.go  length_manager.go
gapis/api/gles/: compat.go  compat_client.go  compat_test.go  custom_replay.go  dead_code_elimination_test.go  dependency_graph_behaviour_provider.go  draw_call.go  draw_call_mesh.go  find_issues.go  markers.go  replay.go  state_builder.go  texture_compat.go
gapis/api/sync/: data.go
gapis/api/templates/: api.go.tmpl  go_common.tmpl  mutate.go.tmpl
gapis/api/test/: intrinsics_test.go
gapis/api/testcmd/: common.go
gapis/api/transform/: transforms.go
gapis/api/vulkan/: BUILD.bazel  custom_replay.go  draw_call_mesh.go  (+14 more)
gapis/memory/: pool.go  pool_test.go
gapis/replay/: custom.go  replay.proto
gapis/resolve/: BUILD.bazel  expanded_command.go  memory.go  metrics.go  overdraw.go  report.go  resolvables.proto  resolve.go  state.go  state_tree_test.go  stats.go
gapis/service/: service.go  service.proto
gapis/shadertools/cc/: BUILD.bazel  desc_analyze_test.cpp  disassemble_test.cpp  libmanager.h  spv_descriptor_analyze.cpp  spv_descriptor_analyze.h  spv_manager.cpp  spv_manager.h  triangle.frag.spv.dis
overdraw/: .gitignore  Makefile  autogenopt.spv  edited.opt.spv  edited.spv.dis  frag.spv  gen.spv.dis  main.cpp  opt.spv  opte.spv  orig.spv.dis  out.spv  triangle.frag  triangle.vert  triangle2.frag
(+9 files in other folders)
