# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//tools/build:rules.bzl", "cc_copts")

cc_library(
    name = "cc",
    srcs = glob(
        [
            "*.cpp",
            "*.h",
        ],
        exclude = ["*_test.cpp"],
    ),
    hdrs = ["libmanager.h"],
    copts = cc_copts(),
    visibility = ["//visibility:public"],
    deps = [
        "@glslang",
        "@spirv_cross//:spirv-cross",
        "@spirv_tools//:spirv-tools",
    ],
)

cc_test(
    name = "tests",
    size = "small",
    srcs = [
        "disassemble_test.cpp",
    ],
    args = ["$(location spirv_example.spv)"],
    copts = cc_copts(),
    data = ["spirv_example.spv"],
    deps = [
        ":cc",
    ],
)

# FIXME: REMOVE
cc_binary(
    name = "test_desc_analysis",
    srcs = [
        "desc_analyze_test.cpp",
        "spv_descriptor_analyze.cpp",
        "spv_descriptor_analyze.h",
    ],
    copts = cc_copts(),
    deps = [
        "@spirv_tools//:spirv-tools",
    ],
)
